Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-25226

Assertion when wsrep_on set to OFF with streaming replication

    XMLWordPrintable

Details

    • Bug
    • Status: Closed (View Workflow)
    • Major
    • Resolution: Fixed
    • 10.4(EOL), 10.5(EOL), 10.6
    • 10.4.19, 10.5.10
    • Galera
    • None

    Description

      The following test:

      CREATE TABLE t1 (f1 INTEGER PRIMARY KEY);
      SET SESSION wsrep_trx_fragment_size=1;
      START TRANSACTION;
      INSERT INTO t1 VALUES(1);
      SET wsrep_on=OFF;
      COMMIT;
      CREATE DATABASE one;
      

      Results in assertion:

      mysqld: /home/sciascid/Workspace/src/mariadb-server/wsrep-lib/src/client_state.cpp:125: int wsrep::client_state::before_command(bool): Assertion `transaction_.active() == false || (transaction_.state() == wsrep::transaction::s_executing || transaction_.state() == wsrep::transaction::s_prepared || transaction_.state() == wsrep::transaction::s_aborted || transaction_.state() == wsrep::transaction::s_must_abort)' failed.
      

      Attachments

        Activity

          People

            sciascid Daniele Sciascia (Inactive)
            sciascid Daniele Sciascia (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 0.25d
                0.25d

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.