sql/wsrep_var.h
@@ -35,6 +35,7 @@ class set_var;
 class THD;
 
 int wsrep_init_vars();
+void wsrep_set_wsrep_on();
 
 #define CHECK_ARGS   (sys_var *self, THD* thd, set_var *var)
 #define UPDATE_ARGS  (sys_var *self, THD* thd, enum_var_type type)
